# peoplesquad-grad-program-dashboard

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
data-scraper/: .gitignore  README.md  coles-group.json  pyproject.toml  scrape.py
data-scraper/inputs/: asx50_seed.json  curated_majors.json
data-scraper/prompts/discover/: schema.md  system.md  user.md
data-scraper/prompts/extract_commercial/: schema.md  system.md  user.md
data-scraper/prompts/extract_program/: schema.md  system.md  user.md
data-scraper/src/recon/: __init__.py  __main__.py  build.py  cli.py  config.py  discovery.py  logo_resolver.py  master_ops.py  models.py  openai_client.py  prompts.py  reporting.py  usage.py  utils.py
data-scraper/tests/: test_build.py  test_build_policy.py  test_build_prompt_vars.py  test_cli.py  test_discovery.py  test_logo_resolver.py  test_master_ops.py  test_openai_usage.py  test_prompt_catalog.py  test_prompt_language_style.py  test_prompts.py  test_reporting.py  test_usage.py  test_utils.py
docs/: vision.md
docs/brand/: peoplesquad.md
docs/requirements/: Initial-build.md
e2e/: app.spec.ts
public/data/: index.json
scripts/: data-index-core.mjs  data-index-core.test.ts  public-data-consistency.test.ts  rebuild-index-from-companies.mjs  rebuild-index-from-companies.test.ts  sync-scraper-data-core.mjs  sync-scraper-data.mjs  sync-scraper-data.test.ts
src/app/: App.test.tsx  App.tsx
src/data/: companyData.test.ts  companyData.ts
src/domain/: dates.test.ts  dates.ts  (+4 more)
(+38 files in other folders)
